config/default-with-monitoring/allow-metrics-traffic.yaml
# This NetworkPolicy allows ingress traffic
# with Pods running on namespaces labeled with 'metrics: enabled'. Only Pods on those
# namespaces are able to gather data from the metrics endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-autoscaler
  name: argocd-autoscaler-allow-metrics-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-autoscaler
  policyTypes:
    - Ingress
  ingress:
    # This allows ingress traffic from any namespace with the label metrics: enabled
    - from:
      - namespaceSelector:
          matchLabels:
            prometheus.io/scraper: "true"
      ports:
        - port: 8080
          protocol: TCP
